Blender Crash When Changing Color Palette in Edit Mode #117526

Closed
opened 2024-01-25 23:59:48 +01:00 by Kristian · 2 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 546.65

Blender Version
Broken: version: 4.0.2, branch: blender-v4.0-release, commit date: 2023-12-05 07:41, hash: 9be62e85b727
Worked: Tested in 2.83LTS with same issue

Short description of error
While this scenario might be considered an edge case, Blender crashes when changing colors in a custom color palette while in Edit Mode. The crash occurs when interacting with a color palette added to a custom panel in the 3D View (VIEW_3D). This issue is unique to Edit Mode and does not occur in other modes such as Weight Paint, Vertex Color, Sculpt, Texture Paint, Pose, or Object Mode.

Exact steps for others to reproduce the error

  1. Open the attached blend file.
  2. Run the script provided in the Script Editor to create the custom panel.
  3. Navigate to the custom panel added in the 3D View.
  4. Enter Edit Mode on any object.
  5. Attempt to change the color using the color palette in the custom panel.
  6. Blender crashes upon attempting to change the color.
**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 546.65 **Blender Version** Broken: version: 4.0.2, branch: blender-v4.0-release, commit date: 2023-12-05 07:41, hash: `9be62e85b727` Worked: Tested in 2.83LTS with same issue **Short description of error** While this scenario might be considered an edge case, Blender crashes when changing colors in a custom color palette while in Edit Mode. The crash occurs when interacting with a color palette added to a custom panel in the 3D View (VIEW_3D). This issue is unique to Edit Mode and does not occur in other modes such as Weight Paint, Vertex Color, Sculpt, Texture Paint, Pose, or Object Mode. **Exact steps for others to reproduce the error** 1. Open the attached blend file. 2. Run the script provided in the Script Editor to create the custom panel. 3. Navigate to the custom panel added in the 3D View. 4. Enter Edit Mode on any object. 5. Attempt to change the color using the color palette in the custom panel. 6. Blender crashes upon attempting to change the color.
Kristian added the
Status
Needs Triage
Severity
Normal
Type
Report
labels 2024-01-25 23:59:49 +01:00
Member

Can confirm, will check

Can confirm, will check
Philipp Oeser added
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-01-26 11:35:41 +01:00
Member

Have a fix, will put up shortly

Have a fix, will put up shortly
Philipp Oeser added the
Module
Sculpt, Paint & Texture
label 2024-01-26 13:09:30 +01:00
Philipp Oeser self-assigned this 2024-01-26 13:09:35 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-01-26 16:23:14 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#117526
No description provided.